--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Roblox ACE SCAN</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>RBX Username Scanner</title>
 
 <style>
+* { box-sizing:border-box; }
+
 body {
-  background:#0b0b0b;
-  color:white;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont;
+  margin:0;
+  background:#0a0a0a;
+  color:#fff;
+  font-family:Inter, system-ui, sans-serif;
   display:flex;
   justify-content:center;
-  align-items:flex-start;
   min-height:100vh;
-  margin:0;
   padding:20px;
 }
 
-.box {
+.app {
   width:100%;
   max-width:420px;
-  padding:20px;
   background:#0f0f0f;
-  border-radius:12px;
+  border-radius:14px;
+  padding:20px;
 }
 
 h1 {
-  color:#00ff88;
   text-align:center;
-  margin-top:0;
+  color:#00ff88;
+  margin:0 0 15px;
 }
 
-label {
-  display:block;
+.row {
   margin-top:12px;
-  opacity:.85;
 }
 
 select, button {
   width:100%;
   padding:12px;
-  margin-top:8px;
-  border-radius:8px;
+  border-radius:10px;
   border:none;
   font-size:15px;
+}
+
+select {
+  background:#151515;
+  color:#fff;
 }
 
 button {
@@ -54,13 +57,12 @@ button {
 }
 
 button.stop {
-  background:#ff5555;
+  background:#ff4444;
   margin-top:8px;
 }
 
 button:disabled {
   opacity:.5;
-  cursor:not-allowed;
 }
 
 .status {
@@ -69,128 +71,107 @@ button:disabled {
   font-weight:600;
 }
 
-.status.run { color:#00ff88; }
-.status.stop { color:#ff5555; }
-
 .log {
   margin-top:15px;
   background:#111;
+  border-radius:10px;
   padding:10px;
-  border-radius:8px;
-  max-height:300px;
+  max-height:320px;
   overflow:auto;
   font-size:14px;
 }
 
 .ok { color:#00ff88; }
 .bad { color:#ff5555; }
-.err { color:#ffaa00; }
 </style>
 </head>
 
 <body>
-<div class="box">
-  <h1>Username Scanner</h1>
+<div class="app">
+  <h1>RBX Name Scanner</h1>
 
-  <label>Username length</label>
-  <select id="length">
-    <option>3</option>
-    <option>4</option>
-    <option selected>5</option>
-    <option>6</option>
-    <option>8</option>
-    <option>10</option>
-    <option>20</option>
-  </select>
+  <div class="row">
+    <select id="length">
+      <option>3</option>
+      <option>4</option>
+      <option selected>5</option>
+      <option>6</option>
+      <option>8</option>
+      <option>10</option>
+      <option>20</option>
+    </select>
+  </div>
 
-  <label>Scan speed</label>
-  <select id="speed">
-    <option value="1">1 / sec</option>
-    <option value="2">2 / sec</option>
-    <option value="3" selected>3 / sec</option>
-  </select>
+  <div class="row">
+    <select id="speed">
+      <option value="1">1 / sec</option>
+      <option value="2">2 / sec</option>
+      <option value="3" selected>3 / sec</option>
+    </select>
+  </div>
 
-  <button id="startBtn">▶ Start</button>
-  <button id="stopBtn" class="stop" disabled>⛔ Stop</button>
+  <button id="start">▶ Start</button>
+  <button id="stop" class="stop" disabled>⛔ Stop</button>
 
-  <div id="status" class="status stop">STOPPED</div>
+  <div class="status" id="status">STOPPED</div>
   <div class="log" id="log"></div>
 </div>
 
 <script>
-let running = false;
-let timer = null;
+let running=false, timer;
+const chars="abcdefghijklmnopqrstuvwxyz0123456789";
+const log=document.getElementById("log");
+const status=document.getElementById("status");
 
-const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-const logEl = document.getElementById("log");
-const statusEl = document.getElementById("status");
-const startBtn = document.getElementById("startBtn");
-const stopBtn = document.getElementById("stopBtn");
-
-function gen(len) {
-  let s = "";
-  for (let i = 0; i < len; i++) {
-    s += chars[Math.floor(Math.random() * chars.length)];
+function gen(len){
+  let s="";
+  for(let i=0;i<len;i++){
+    s+=chars[Math.floor(Math.random()*chars.length)];
   }
   return s;
 }
 
-function addLog(html) {
-  logEl.insertAdjacentHTML("afterbegin", html);
-
-  // limit log size
-  while (logEl.children.length > 120) {
-    logEl.removeChild(logEl.lastChild);
-  }
+function add(html){
+  log.insertAdjacentHTML("afterbegin",html);
+  while(log.children.length>120) log.removeChild(log.lastChild);
 }
 
-async function scan() {
-  if (!running) return;
+async function scan(){
+  if(!running) return;
 
-  const len = Number(document.getElementById("length").value);
-  const name = gen(len);
+  const len=+length.value;
+  const name=gen(len);
 
-  try {
-    const r = await fetch(`/api/validate?username=${encodeURIComponent(name)}`);
-    const d = await r.json();
+  try{
+    const r=await fetch(`/api/validate?username=${name}`);
+    const d=await r.json();
 
-    if (d.available) {
-      addLog(`<div class="ok">✅ AVAILABLE: ${name}</div>`);
-    } else {
-      addLog(`<div class="bad">❌ ${name} (${d.reason || "taken"})</div>`);
+    if(d.available){
+      add(`<div class="ok">✔ ${name} AVAILABLE</div>`);
+    }else{
+      add(`<div class="bad">✖ ${name}</div>`);
     }
-  } catch (e) {
-    addLog(`<div class="err">⚠ error checking ${name}</div>`);
+  }catch{
+    add(`<div class="bad">⚠ error</div>`);
   }
 }
 
-function start() {
-  if (running) return;
+start.onclick=()=>{
+  if(running) return;
+  running=true;
+  start.disabled=true;
+  stop.disabled=false;
+  status.textContent="RUNNING";
+  timer=setInterval(scan,1000/+speed.value);
+};
 
-  running = true;
-  startBtn.disabled = true;
-  stopBtn.disabled = false;
-
-  statusEl.textContent = "RUNNING";
-  statusEl.className = "status run";
-
-  const sp = Number(document.getElementById("speed").value);
-  timer = setInterval(scan, 1000 / sp);
-}
-
-function stop() {
-  running = false;
+stop.onclick=()=>{
+  running=false;
   clearInterval(timer);
-
-  startBtn.disabled = false;
-  stopBtn.disabled = true;
-
-  statusEl.textContent = "STOPPED";
-  statusEl.className = "status stop";
-}
-
-startBtn.onclick = start;
-stopBtn.onclick = stop;
+  start.disabled=false;
+  stop.disabled=true;
+  status.textContent="STOPPED";
+};
 </script>
 </body>
 </html>
